--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -7,12 +7,20 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "husky": "^4.2.5",
     "jquery": "^3.5.1",
+    "lint-staged": "^10.2.2",
     "popper.js": "^1.16.1",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +45,10 @@
   },
   "devDependencies": {
     "axios": "^0.19.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
