--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -13,6 +13,7 @@
     "popper.js": "^1.16.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
